Stop the browser scrollbars from appearing when dragging sortable entries.

--- a/vasl_templates/webapp/static/css/main.css
+++ b/vasl_templates/webapp/static/css/main.css
@@ -1,6 +1,6 @@
 * { margin: 0 ; padding: 0 }
 html { height: 100% ; }
-body { height: 100% ; }
+body { height: 100% ; overflow: hidden ; }
 
 /* -------------------------------------------------------------------- */
 
